--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <!-- Navbar -->
     <nav id="navigation" class="navbar navbar-expand-lg">
-      <a class="navbar-brand" href="#">Saran</a>
+      <a class="navbar-brand" href="#">Rajat Kumar Saran</a>
 
       <button
         class="navbar-toggler"
@@ -84,11 +84,11 @@
           <div class="col-md-7">
             <h4 class="aboutMe">About Me</h4>
             <p>
-              I am Rajat Saran
+              I am Rajat Kumar Saran
             </p>
-
+              Currently working as a python developer in Brickredsystems INDIA pvt ltd
             <p>
-              hlwwww
+              Python developer. Comfortable  with popular frame Work as like Django,flask,turtle etc
             </p>
           </div>
         </div>
@@ -110,7 +110,7 @@
                 <span class="percent">85</span>
                 <canvas height="152" width="152"></canvas>
               </span>
-              <h4>HTML</h4>
+              <h4>Python</h4>
             </div>
 
             <div class="skill">
@@ -118,7 +118,7 @@
                 <span class="percent">60</span>
                 <canvas height="152" width="152"></canvas>
               </span>
-              <h4>CSS</h4>
+              <h4>Video editing</h4>
             </div>
 
             <div class="skill">
@@ -126,12 +126,12 @@
                 <span class="percent">80</span>
                 <canvas height="152" width="152"></canvas>
               </span>
-              <h4>Javascript</h4>
+              <h4>Cuntent creation</h4>
             </div>
 
             <div class="skill">
               <span class="chart" data-percent="45">
-                <span class="percent">45</span>
+                <span class="percent">70</span>
                 <canvas height="152" width="152"></canvas>
               </span>
               <h4>C#</h4>
@@ -152,7 +152,7 @@
                   <i class="fas fa-globe"></i>
                 </div>
                 <div class="squareContent">
-                  <h2 class="counter">59</h2>
+                  <h2 class="counter">5</h2>
                   <h3>Projects Done</h3>
                 </div>
               </div>
