--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       <div class="col-md-12 text-center">
         <p class="subHeading">Do you want to contact me?</p>
         <h2>Send an email now.</h2>
-        <a href="mailTo:contact@subuthai.xyz" class="contactButton"
+        <a href="mailTo:rajat.saran@brickredsys.in" class="contactButton"
           >Contact me!</a
         >
       </div>
